Desenvolvimento e Finalização da Assincrona
Co-Authored-By: Guilherme Palma <54846154+guilhermepalma@users.noreply.github.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="btn_search">Pesquisar</string>
     <string name="img_makeup">Imagem de Maquiagem</string>
     <string name="title_result">Resultado da Busca</string>
+    <string name="error_input">Preencha os Campos</string>
+    <string name="error_connection">Erro na Conexão</string>
+    <string name="string_empty">" "</string>
 </resources>
