Manipulacao no Banco de Dados

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="error_connection">Erro na Conexão</string>
     <string name="string_empty"> </string>
     <string name="clear_bd">Limpar Dados Salvos</string>
+    <string name="error_json">Erro na Leitura do JSON</string>
 </resources>
