--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="error_connection">Sem Conexão</string>
     <string name="string_empty"> </string>
     <string name="clear_bd">Limpar Dados Salvos</string>
-    <string name="error_json">Erro na Leitura dos Dados :(</string>
+    <string name="error_json">Erro na Leitura dos Dados</string>
     <string name="table_empty">A Tabela não Possuem nenhum Dado</string>
+    <string name="no_exists">Não existe nenhum Produto Cadastrado com esse Tipo e Marca</string>
 </resources>
