Alteracao no Layout de Busca e Apresentacao dos Produtos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="location_now">Localização Atual</string>
     <string name="clear_window">Limpar dados da Tela</string>
     <string name="change_theme">Mudar o Tema</string>
+    <string name="return_search">Fazer outra Busca</string>
 </resources>
