--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
 
     <!-- Mensagens de Erro -->
     <string name="error_input">Preencha os Campos</string>
-    <string name="error_connection">Sem Conexão</string>
+    <string name="error_connection">Sem Conexão com a Internet</string>
     <string name="error_json">Erro na Leitura dos Dados</string>
     <string name="table_empty">A Tabela não Possuem nenhum Dado</string>
     <string name="no_exists">Não existe nenhum Produto Cadastrado com esse Tipo e Marca</string>
@@ -32,9 +32,11 @@
     <string name="description_imageProduct">Imagem do Produto</string>
 
     <!-- Activity Location -->
-    <string name="txt_titleLocation"><b>Localização</b></string>
+    <string name="txt_titleLocation"><b>Localização Atual</b></string>
     <string name="txt_probablyError">Essa é uma localização baseada na ultima localização
         registrada. Pode representar um <b>enderço não exato</b></string>
+    <string name="error_searchLocation">Erro na busca do Endereço</string>
+    <string name="error_noGps">Sem conexão com o GPS</string>
 
 
 </resources>
