--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,9 +39,10 @@
     <string name="txt_probablyError">Essa é uma localização baseada na ultima localização
         registrada. Pode representar um <b>enderço não exato</b></string>
 
-    <!-- Fragment SaveMakeup -->
-    <string name="rbtn_save">Salvar Produto</string>
-    <string name="rbtn_noSave">Não Salvar Produto</string>
+    <!-- Fragment FeedbackLocation -->
+    <string name="rbtn_wrongLocation">Localização Incorreta</string>
+    <string name="rbtn_correctLocation">Localização Correta</string>
+    <string name="btn_showFragment">Mostrar Opções</string>
 
 
 </resources>
