Implementação da Custom View e Widget

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,11 @@
     <string name="btn_showFragment">Mostrar Opções</string>
 
 
+    <!-- Layout Widget -->
+    <string name="widget_id_label">Widget ID</string>
+    <string name="widget_update_label">Ultima Atualização</string>
+    <string name="widget_button_update">Atualizar</string>
+    <string name="date_count_format">%1$d @%2$s</string>
+    <string name="result"> Ver valores</string>
+
 </resources>
