Update: Refatoração do Codigo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,17 +10,21 @@
     <string name="string_empty"> </string>
     <string name="value_required">Campo Obrigatorio</string>
 
-    <!-- Activity Result -->
-    <string name="error_recoveryData">Nenhum dado foi informado para a Busca</string>
-
     <!-- Mensagens de Erro -->
-    <string name="error_input">Preencha os Campos</string>
-    <string name="error_connection">Sem Conexão com a Internet</string>
-    <string name="title_errorJson">Dados Invalidos</string>
-    <string name="error_json">Erro na Leitura dos Dados, Tente Novamente</string>
     <string name="table_empty">A Tabela não Possuem nenhum Dado</string>
+    <string name="title_noConnection">Sem Internet</string>
+    <string name="title_errorJson">Dados Invalidos</string>
+    <string name="title_noGps">Sem GPS</string>
     <string name="title_noExist">Produto e/ou Marca não Encontrado</string>
-    <string name="no_exists">Não existe nenhum Produto Cadastrado com esse Tipo e Marca</string>
+    <string name="error_input">Preencha os Campos</string>
+    <string name="error_noExists">Não existe nenhum Produto Cadastrado com esse Tipo e Marca</string>
+    <string name="error_connection">Sem Conexão com a Internet</string>
+    <string name="error_json">Erro na Leitura dos Dados, Tente Novamente</string>
+    <string name="error_noGps">Sem conexão com o GPS</string>
+    <string name="error_searchLocation">Erro na busca do Endereço</string>
+    <string name="error_location">Erro ao recuperar a ultima localização</string>
+    <string name="error_recoveryData">Nenhum dado foi informado para a Busca</string>
+    <string name="error_sensor">Sensor de Proximidade não Disponivel no Dispostivo</string>
 
     <!-- Strings do Menu -->
     <string name="clear_bd">Limpar Dados Salvos</string>
@@ -41,9 +45,6 @@
     <!-- Activity Location -->
     <string name="txt_titleLocation"><b>Localização Atual</b></string>
     <string name="txt_noSearch">Não encontramos sua Localização. Tente Novamente</string>
-    <string name="error_searchLocation">Erro na busca do Endereço</string>
-    <string name="error_location">Erro ao recuperar a ultima localização</string>
-    <string name="error_noGps">Sem conexão com o GPS</string>
     <string name="txt_probablyError">Essa é uma localização baseada na ultima localização
         registrada. Pode representar um <b>enderço não exato</b></string>
 
@@ -52,7 +53,6 @@
     <string name="rbtn_correctLocation">Localização Correta</string>
     <string name="btn_showFragment">Mostrar Opções</string>
     <string name="btn_sendLocation">Enviar Dados</string>
-
 
     <!-- Layout Widget -->
     <string name="txt_idWidget">Numero Widget</string>
@@ -64,6 +64,4 @@
     <string name="txt_divider">/</string>
     <string name="description_imageButton">Atualizar Widget</string>
 
-    <!-- Layout Sensor -->
-    <string name="txt_errorSensor">Sensor de Proximidade não Disponivel no Dispostivo</string>
 </resources>
