--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,9 @@
     <string name="description_product"><b>Descrição: </b></string>
     <string name="fill_text">Informações da API</string>
     <string name="description_imageProduct">Imagem do Produto</string>
+    <string name="empty_name">Produto sem Nome</string>
+    <string name="empty_price">Preço não Encontrado</string>
+    <string name="empty_description">Produto sem Descrição</string>
 
     <!-- Activity Location (&lt; = '<' em HTML)-->
     <string name="txt_titleLocation"><b>Localização Atual</b></string>
@@ -62,11 +65,12 @@
     <string name="btn_sendLocation">Enviar Dados</string>
 
     <!-- Layout Widget -->
-    <string name="txt_idWidget">Numero Widget</string>
-    <string name="txt_lastUpdate">Ultima Atualização</string>
+    <string name="txt_idWidget">&lt;b>ID Widget&lt;/b>: %d</string>
+    <string name="txt_lastUpdate">&lt;b>Numero de Atualizações&lt;/b>: %d</string>
+    <string name="txt_updateTime">&lt;b>Ultima Atualização&lt;/b>: %s</string>
     <string name="txt_formatDateCount">%1$d - %2$s</string>
-    <string name="txt_makeupSearch">Buscas de Maquiagens</string>
-    <string name="txt_locationSearch">Localizações Buscadas</string>
+    <string name="txt_makeupSearch">Buscas de Maquiagens:</string>
+    <string name="txt_locationSearch">Localizações Buscadas:</string>
     <string name="txt_brandTypeFormat">%1$s</string>
     <string name="txt_divider">/</string>
     <string name="description_imageButton">Atualizar Widget</string>
