Feature: Alteração nas Mensagens e Metodos de Erro

--- a/Makeup/src/main/res/values/strings.xml
+++ b/Makeup/src/main/res/values/strings.xml
@@ -85,6 +85,7 @@
     <string name="title_existUser">Usuario já Existente</string>
     <string name="title_noExistUser">Usuario não Encontrado</string>
     <string name="title_errorAPI">Operação Não Relizada</string>
+    <string name="title_noData">Sem Dados</string>
     <string name="error_input">Preencha os Campos</string>
     <string name="error_noExists">Não existe nenhum Produto Cadastrado com esse Tipo e Marca</string>
     <string name="error_connection">Sem Conexão com a Internet</string>
